--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/android": "^4.6.3",
     "@capacitor/cli": "^4.6.3",
     "@capacitor/core": "^4.6.3",
+    "@headlessui/vue": "^1.7.10",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
