--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/assets": "^2.0.4",
     "@capacitor/cli": "^4.6.3",
     "@capacitor/core": "^4.6.3",
+    "@capacitor/local-notifications": "^4.1.5",
     "@headlessui/vue": "^1.7.10",
     "dexie": "^3.2.3",
     "pinia": "^2.0.28",
