--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@capacitor/core": "^4.6.3",
     "@capacitor/local-notifications": "^4.1.5",
     "@headlessui/vue": "^1.7.10",
+    "dayjs": "^1.11.7",
     "dexie": "^3.2.3",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
